--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="board" style="width:400px"></div>
+    <div id="checkmark">✅</div>
+    <div id="crossmark">❌</div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
