--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <script type="module" src="./index.js"></script>
+    <div id="puzzle_container">
+    </div>
+    <button id="next_button">Next</button>
   </body>
 </html>
