--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <script type="module" src="./index.js"></script>
-    <div id="puzzle_container">
-    </div>
+    <div id="puzzle_container"></div>
+    <p id="solution_el"></p>
+    <div id="congrats">Success!</div>
     <button id="next_button">Next</button>
+    <button id="show_solution">Show solution</button>
   </body>
 </html>
