--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/chessboard.css">
     <link rel="stylesheet" href="./assets/extensions/markers/markers.css">
     <link rel="stylesheet" href="./styles.css">
@@ -10,7 +11,10 @@
     <div id="puzzle_container"></div>
     <p id="solution_el"></p>
     <div id="congrats">Success!</div>
-    <button id="next_button">Next</button>
-    <button id="show_solution">Show solution</button>
+    <div class="controls">
+      <button id="add_to_fav">Add to favorites</button>
+      <button id="next_button">Next</button>
+      <button id="show_solution">Show solution</button>
+    </div>
   </body>
 </html>
