add tournament selector

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <script type="module" src="./index.js"></script>
+    <div class="tournament-selector">
+      <label for="tournament-select">Tournament: </label>
+      <select id="tournament-select" name="tournament">
+        <option value="Titled-Tuesday-Blitz-October-07-2025">Titled-Tuesday-Blitz-October-07-2025</option>
+        <option value="Winter Cup 100 000 UAH">Winter Cup 100 000 UAH</option>
+        <option value="World Rapid 2025" selected>World Rapid 2025</option>
+      </select>
+    </div>
     <div id="puzzle_container"></div>
     <p id="solution_el"></p>
     <div id="congrats">Success!</div>
