--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="tournament-selector">
       <label for="tournament-select">Tournament: </label>
       <select id="tournament-select" name="tournament">
-        <option value="Titled-Tuesday-Blitz-October-07-2025">Titled-Tuesday-Blitz-October-07-2025</option>
+        <option value="Titled-Tuesday-Blitz-October-07-2025" selected>Titled-Tuesday-Blitz-October-07-2025</option>
         <option value="Winter Cup 100 000 UAH">Winter Cup 100 000 UAH</option>
-        <option value="World Rapid 2025" selected>World Rapid 2025</option>
+        <option value="World Rapid 2025">World Rapid 2025</option>
       </select>
     </div>
     <div id="puzzle_container"></div>
